<resources>
    <string name="app_name">Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="Sign_up">Sign up</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="submit_post">Submit Post</string>
    <string name="txtFirstName">First name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
</resources>
